# ClawToolPlugs

./: .gitignore  CMakeLists.txt  README.md  build.sh  cross-compile.sh  tools.json
phone-tools/: .gitignore  README.md  api.ts  index.ts  openclaw.plugin.json  package.json  runtime-api.ts
phone-tools/src/: index.ts  socket-client.ts  types.ts
src/: main.cpp  protocol.cpp  protocol.h  server.cpp  server.h  tool_registry.cpp  tool_registry.h
src/tools/: get_device_info.cpp  get_device_info.h  get_location.cpp  get_location.h  install_app.cpp  install_app.h  search_images.cpp  search_images.h  send_notification.cpp  send_notification.h
